--- a/.github/workflows/main_sethb-testfuncslots2(staging).yml
+++ b/.github/workflows/main_sethb-testfuncslots2(staging).yml
@@ -47,9 +47,9 @@ jobs:
         id: publishProfileRetrieval
         run: | 
             publishProfiles=$(az webapp deployment list-publishing-profiles \
-              --name "<FUNCTION APP NAME>" \
-              --resource-group "<RESOURCE GROUP NAME>" \
-              --subscription "<SUBSCRIPTION ID>" --xml)
+              --name "sethb-testfuncslots2" \
+              --resource-group "Sethb-TestApps-RG" \
+              --subscription "d0781fa9-5724-4d1a-8796-d58abb908b0d" --xml)
             echo "::add-mask::$publishProfiles"
             echo "::set-output name=publishProfiles::$publishProfiles"
       
