--- a/.github/workflows/main_sethb-testfuncslots2(staging).yml
+++ b/.github/workflows/main_sethb-testfuncslots2(staging).yml
@@ -41,24 +41,14 @@ jobs:
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_DE5C20C919EE40288EA2CC391F9FCF73 }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_8A966287504B4803B54A5D815D561A2E }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_7303AE5594174F1FA15555DF03EA62BE }}
-      
-      - name: Retrieve publish profile for deployment
-        id: publishProfileRetrieval
-        run: | 
-            publishProfiles=$(az webapp deployment list-publishing-profiles \
-              --name "sethb-testfuncslots2" \
-              --resource-group "Sethb-TestApps-RG" \
-              --subscription "d0781fa9-5724-4d1a-8796-d58abb908b0d" --xml)
-            echo "::add-mask::$publishProfiles"
-            echo "::set-output name=publishProfiles::$publishProfiles"
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_7303AE5594174F1FA15555DF03EA62BE }
       
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
         id: fa
         with:
-          app-name: 'sethb-testfuncslots2'
+          app-name: 'sethb-testfuncslots3'
           slot-name: 'staging'
           package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/output'
-          publish-profile: ${{ steps.publishProfileRetrieval.outputs.publishProfiles }}
+          
           
