--- a/.github/workflows/main_sethb-testfuncslots2(staging).yml
+++ b/.github/workflows/main_sethb-testfuncslots2(staging).yml
@@ -41,7 +41,7 @@ jobs:
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_DE5C20C919EE40288EA2CC391F9FCF73 }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_8A966287504B4803B54A5D815D561A2E }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_7303AE5594174F1FA15555DF03EA62BE }
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_7303AE5594174F1FA15555DF03EA62BE }}
       
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
